# pathfinder

./: .gitignore  CODE_INDEX.json  HANDOFF.md  INTEGRATION_FOR_CONSUMER_APPS.md  MANIFEST.in  PATHFINDER_EXTRACTION_PLAN.md  README.md  build.json  hooks.py  install.py  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
Frappe Context/: FC_ROUTING.md  INDEX.md  _idx_backend.md  _idx_framework.md  _idx_ui.md  fc-route.ts  fc_index.json  frappe-csv-token-access.md  frappe-discovery-tool-spec.md  frappe-manager-ui-actions.md  frappe-ui-migration-plan.docx  frappe_variables.txt  theming_css_systems.md  theming_vue_tokens.md  v15_v16_compat.md  workspace_desktop_setup.md
Frappe Context/frappe_docs_jsonl/: 01_getting_started.jsonl  02_core_concepts.jsonl  03_doctype_system.jsonl  04_desk_ui.jsonl  05_js_client_api.jsonl  06_python_api.jsonl  07_portal_web.jsonl  08_auth_integration.jsonl  09_bench_cli.jsonl  10_deployment.jsonl  11_testing_debugging.jsonl  12_guides_app_dev.jsonl  13_misc.jsonl  _manifest.json
Frappe Context/frappe_rag_chunks/: 00_index.md  01_introduction_core_concepts.md  02_database_operations_basic.md  03_database_operations_advanced.md  04_document_orm_basic.md  05_document_orm_advanced.md  06_query_helpers.md  07_users_permissions.md  08_cache_operations.md  09_files_attachments.md  10_email_notifications.md  11_background_jobs.md  12_utilities_datetime.md  13_utilities_numbers_strings.md  14_custom_fields_property_setters.md  15_doctype_meta_schema.md  16_hooks_document_events.md  17_api_whitelisted_methods.md  18_logging_error_handling.md  (+1 more)
api/: __init__.py  pathfinder_api.py  test_pathfinder_api.py
frontend/: package.json  vite.config.js
pathfinder/: __init__.py  hooks.py  install.py  modules.txt
(+52 files in other folders)
