[project]
name = "pathfinder"
version = "0.0.1"
description = "Visual field-path navigator for Frappe — create virtual fields by traversing DocType link chains"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "NCE", email = "dev@nce.dev" },
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
