[metadata]
name = pathfinder
version = attr: pathfinder.__version__
author = NCE
author_email = dev@nce.dev
description = Visual field-path navigator for Frappe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oliver-nce/pathfinder
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Frappe
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10
install_requires =
    frappe

[options.packages.find]
exclude =
    tests
    tests.*
